--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -10,7 +10,7 @@ body {
   color: #606c71; }
 
 a {
-  color: #1e6bb8;
+  color: #fff;
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
@@ -61,7 +61,7 @@ a {
 
 @media screen and (min-width: 64em) {
   .page-header {
-    padding: 5rem 6rem; } }
+    padding: 0.5em 0rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .page-header {
@@ -105,7 +105,7 @@ a {
     font-size: 1rem; } }
 
 .main-content :first-child {
-  margin-top: 0; }
+  margin-top: -150px; }
 .main-content img {
   max-width: 100%; }
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
@@ -202,11 +202,12 @@ a {
   margin: 1rem 0;
   background-color: #eff0f1;
   border: 0; }
-
+iframe{border: none;}
 @media screen and (min-width: 64em) {
   .main-content {
-    max-width: 64rem;
-    padding: 2rem 6rem;
+    overflow:hidden;
+    width: 100%;
+    padding: 2rem 0rem;
     margin: 0 auto;
     font-size: 1.1rem; } }
 
